# moddwatch

./: CMakeLists.txt  README.md  backend_fswatch.go  backend_fswatch_stub.go  event.go  fswatch.go  fswatch_bridge.c  fswatch_bridge.h  fswatch_darwin.go  fswatch_linux.go  globmatch.c  globmatch.h  go.mod  go.sum  mw_watch.c  mw_watch.cpp  mw_watch.h  test_globmatch.c  watch.go  watch_test.go
cmd/test/: main.go
test/c/: Makefile  test.yml  test_bridge.c
